--- a/_config.yml
+++ b/_config.yml
@@ -42,12 +42,12 @@ twitter: mytwitter
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: https://github.com/carlcj
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+medium: https://medium.com/@sainadhjamalpur
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: sainadhjamalpur@gmail.com
